k8s-manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: samirjha123/api:latest
          ports:
            - containerPort: 8080
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
