k8s-manifest/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis-service
spec:
  ports:
    - port: 6379  #Exposed port number
      protocol: TCP
      targetPort: 6379  #Service port number
  selector:
    name: redis  #Selected Pod Tags
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-service
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-service
    spring-boot: "true"
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api
  type: ClusterIP
